fix(ui): correct misconfigured dark mode colors in Tailwind CSS

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
+@config "./tailwind.config.ts";
 
 @theme {
   --color-background-1: oklch(0.1448 0 0); /* Default element background */
@@ -14,6 +15,7 @@
   --color-color-8: oklch(0.5897 0 0); /* Hover high contrast background */
   --color-color-9: oklch(0.709 0 0); /* Secondary text and icons */
   --color-color-10: oklch(0.9461 0 0); /* Primary text and icons */
+  --color-link-1: oklch(0.72 0.15 250.78); /* Default link */
 }
 
 @layer base {
@@ -30,27 +32,31 @@
     @apply my-2 focus:outline-none;
   }
   .ProseMirror p.placeholder:first-child:before {
-    color: var(--color-color-9);
-    content: attr(data-placeholder);
-    float: left;
-    height: 0;
-    pointer-events: none;
+    @apply text-color-9 pointer-events-none float-left h-0 content-[attr(data-placeholder)];
   }
 }
 
+.markdown {
+  @apply max-w-[unset];
+}
+
 .markdown p:not(:first-child) {
-  margin-top: 0.5rem;
+  @apply mt-2;
 }
 
 .markdown p {
-  margin-bottom: 0.5rem;
+  @apply mb-2;
 }
 
 .markdown ol,
 .markdown ul {
-  margin-bottom: calc(var(--spacing) * 4);
+  @apply mb-4;
 }
 
 .markdown p + :where(ol, ul) {
-  margin-top: 0;
+  @apply mt-0;
+}
+
+.markdown a {
+  @apply font-normal no-underline;
 }
